# LexRAG

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/ingestion/: pdf_parser.py
utils/: helper_function.py
